--- a/src/featured.css
+++ b/src/featured.css
@@ -1,34 +1,29 @@
 .featured-container {
-    width: 100%;
-    margin: auto;
-    position: relative;
-    display: flex;
+  width: 100%;
+  margin: auto;
+  position: relative;
+  display: flex;
 }
 
 .featured-content {
-    width: 60%;
-    margin: auto;
-    display: block;
-    margin-top:15px;
-    
+  width: 60%;
+  margin: auto;
+  display: block;
+  margin-top: 15px;
 }
 .images {
-    width: 100%;
-    margin: auto;
-    display: flex;
-
+  width: 100%;
+  margin: auto;
+  display: flex;
+  padding: 5px 0;
 }
 
 .image-container {
-   -webkit-column-count: 4;
-   -moz-column-count: 4;
-   column-count: 4;
-   -webkit-column-width: 25%;
-   -moz-column-width: 25%;
-   column-width: 25%;
-   padding: 10px 20px;
+  column-count: 4;
+  column-width: 25%;
+  column-gap: 20px;
 }
-.images img{
-    border-radius: 6px;
-
+.images img {
+  border-radius: 3px;
+  width: 100%;
 }
