--- a/src/featured.css
+++ b/src/featured.css
@@ -15,6 +15,7 @@
   width: 100%;
   margin: auto;
   display: flex;
+  
   padding: 5px 0;
 }
 
@@ -22,8 +23,12 @@
   column-count: 4;
   column-width: 25%;
   column-gap: 20px;
+
 }
 .images img {
   border-radius: 3px;
   width: 100%;
+  background-position: 50%;
+  background-size: cover;
+  
 }
